# tuimpdrs

./: Cargo.toml  README.org  roadmap.org
doc/: example_config.toml
src/: config.rs  main.rs  now_playing.rs  prompt.rs  songlist.rs  status.rs
