[package]
name = "mpdtuirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "*"
tui = "0.19"
crossterm = "0.25"
serde = { version = "1.0.158", features = ["derive"] }
dirs = "5.0.0"
toml = "0.7.3"
